--- a/index.html
+++ b/index.html
@@ -36,33 +36,82 @@
   <!-- Eventos -->
   <section class="max-w-7xl mx-auto px-6 py-12 grid gap-6 md:grid-cols-3">
     <!-- Card -->
+  <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden hover:scale-105 transition">
+  <img src="img/1.jpg" alt="evento" class="w-full h-40 object-cover">
+  <div class="p-5">
+    <h3 class="font-bold text-xl mb-2">Conferência de Tecnologia</h3>
+    <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">15 de Setembro, Luanda</p>
+    <button onclick="openModal('eventModal')" class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition">
+      <span>Detalhes</span>
+      <!-- Ícone -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+    </button>
+  </div>
+</div>
+
+    <!-- Outro Card -->
     <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden hover:scale-105 transition">
-      <img src="https://source.unsplash.com/600x300/?conference" alt="evento" class="w-full h-40 object-cover">
+     <img src="img/2.jpg" alt="evento" class="w-full h-40 object-cover">
       <div class="p-5">
         <h3 class="font-bold text-xl mb-2">Conferência de Tecnologia</h3>
         <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">15 de Setembro, Luanda</p>
-        <button onclick="openModal('eventModal')" class="px-4 py-2 bg-indigo-500 text-white rounded-lg">Detalhes</button>
+        <button onclick="openModal('eventModal')" class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition">
+          <span>Detalhes</span>
+          <!-- Ícone -->
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </button>
       </div>
     </div>
+
+
     <!-- Outro Card -->
     <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden hover:scale-105 transition">
-      <img src="https://source.unsplash.com/600x300/?music,festival" alt="evento" class="w-full h-40 object-cover">
-      <div class="p-5">
-        <h3 class="font-bold text-xl mb-2">Festival de Música</h3>
-        <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">30 de Setembro, Benguela</p>
-        <button onclick="openModal('eventModal')" class="px-4 py-2 bg-indigo-500 text-white rounded-lg">Detalhes</button>
-      </div>
-    </div>
-    <!-- Outro Card -->
-    <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden hover:scale-105 transition">
-      <img src="https://source.unsplash.com/600x300/?workshop" alt="evento" class="w-full h-40 object-cover">
-      <div class="p-5">
-        <h3 class="font-bold text-xl mb-2">Workshop de Inovação</h3>
-        <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">12 de Outubro, Huambo</p>
-        <button onclick="openModal('eventModal')" class="px-4 py-2 bg-indigo-500 text-white rounded-lg">Detalhes</button>
-      </div>
-    </div>
+  <img src="img/3.jpg" alt="evento" class="w-full h-40 object-cover">
+  <div class="p-5">
+    <h3 class="font-bold text-xl mb-2">Conferência de Tecnologia</h3>
+    <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">15 de Setembro, Luanda</p>
+    <button onclick="openModal('eventModal')" class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition">
+      <span>Detalhes</span>
+      <!-- Ícone -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+    </button>
+  </div>
+</div>
+
   </section>
+
+  <!-- Sessão de Contactos -->
+  <footer class="bg-gray-200 dark:bg-gray-800 py-10 mt-12">
+    <div class="max-w-7xl mx-auto px-6 text-center">
+      <h3 class="text-2xl font-bold mb-4 text-indigo-600 dark:text-indigo-400">Contacte-nos</h3>
+      <p class="mb-6 text-gray-600 dark:text-gray-400">Fique conectado connosco através das nossas redes sociais</p>
+      <div class="flex justify-center gap-6">
+        <!-- Facebook -->
+        <a href="https://facebook.com" target="_blank" class="text-blue-600 hover:scale-110 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M22 12c0-5.522-4.477-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987H7.898v-2.89h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562v1.875h2.773l-.443 2.89h-2.33v6.987C18.343 21.128 22 16.991 22 12"></path></svg>
+        </a>
+        <!-- Instagram -->
+        <a href="https://instagram.com" target="_blank" class="text-pink-500 hover:scale-110 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3h10zm-5 3a5 5 0 100 10 5 5 0 000-10zm0 2c1.654 0 3 1.346 3 3s-1.346 3-3 3a3.001 3.001 0 01-3-3c0-1.654 1.346-3 3-3zm4.5-.75a1.25 1.25 0 11-.001 2.501A1.25 1.25 0 0116.5 8.25z"></path></svg>
+        </a>
+        <!-- WhatsApp -->
+        <a href="https://wa.me/244900000000" target="_blank" class="text-green-500 hover:scale-110 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M12.005 2C6.485 2 2 6.486 2 12.006c0 2.115.557 4.179 1.615 5.997L2 22l4.146-1.586A9.931 9.931 0 0012.005 22C17.525 22 22 17.515 22 12.006 22 6.486 17.525 2 12.005 2zm0 18c-1.688 0-3.325-.46-4.758-1.332l-.341-.203-2.457.94.657-2.393-.221-.366A7.944 7.944 0 014.005 12c0-4.411 3.589-8.006 8-8.006 4.411 0 8 3.595 8 8.006 0 4.411-3.589 8-8 8zm4.307-5.846c-.235-.117-1.391-.684-1.607-.761-.216-.078-.373-.117-.53.117-.157.235-.607.761-.744.918-.137.157-.274.176-.509.059-.235-.117-.991-.365-1.888-1.162-.698-.623-1.168-1.39-1.304-1.625-.137-.235-.015-.362.103-.479.106-.106.235-.274.352-.411.117-.137.157-.235.235-.392.078-.157.039-.294-.02-.411-.059-.117-.53-1.274-.726-1.743-.196-.47-.393-.401-.53-.411-.137-.01-.294-.012-.451-.012s-.411.059-.627.294c-.216.235-.823.804-.823 1.96s.844 2.274.961 2.431c.117.157 1.66 2.536 4.022 3.553.562.243.999.389 1.34.497.562.179 1.073.154 1.477.093.451-.067 1.391-.568 1.587-1.115.196-.548.196-1.018.137-1.115-.059-.098-.216-.157-.451-.274z"></path></svg>
+        </a>
+        <!-- LinkedIn -->
+        <a href="https://linkedin.com" target="_blank" class="text-blue-700 hover:scale-110 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.604 4.09 5.5 2.98 5.5S.98 4.604.98 3.5 1.87 1.5 2.98 1.5s2 .896 2 2zm.02 4.5H1V21h4V8zm7 0h-3.938v13H12v-6.5c0-3.584 4-3.875 4 0V21h4v-7.75c0-5.92-6.5-5.703-8-2.781V8z"></path></svg>
+        </a>
+      </div>
+      <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">© 2025 Imetro Eventos. Todos os direitos reservados.</p>
+    </div>
+  </footer>
 
   <!-- Modal Detalhes do Evento -->
   <div id="eventModal" class="fixed inset-0 hidden bg-black/50 backdrop-blur-sm flex items-center justify-center z-50">
