--- a/index.html
+++ b/index.html
@@ -33,27 +33,13 @@
     <input type="text" placeholder="🔍 Pesquise eventos..." class="w-full max-w-md mx-auto p-3 rounded-xl border border-gray-300 dark:border-gray-700 bg-white/70 dark:bg-gray-800/70 backdrop-blur-md">
   </section>
 
+  
+
   <!-- Eventos -->
   <section class="max-w-7xl mx-auto px-6 py-12 grid gap-6 md:grid-cols-3">
     <!-- Card -->
-  <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden hover:scale-105 transition">
-  <img src="img/1.jpg" alt="evento" class="w-full h-40 object-cover">
-  <div class="p-5">
-    <h3 class="font-bold text-xl mb-2">Conferência de Tecnologia</h3>
-    <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">15 de Setembro, Luanda</p>
-    <button onclick="openModal('eventModal')" class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition">
-      <span>Detalhes</span>
-      <!-- Ícone -->
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-      </svg>
-    </button>
-  </div>
-</div>
-
-    <!-- Outro Card -->
     <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden hover:scale-105 transition">
-     <img src="img/2.jpg" alt="evento" class="w-full h-40 object-cover">
+      <img src="img/1.jpg" alt="evento" class="w-full h-40 object-cover">
       <div class="p-5">
         <h3 class="font-bold text-xl mb-2">Conferência de Tecnologia</h3>
         <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">15 de Setembro, Luanda</p>
@@ -67,76 +53,91 @@
       </div>
     </div>
 
+    <!-- Outro Card -->
+    <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden hover:scale-105 transition">
+      <img src="img/2.jpg" alt="evento" class="w-full h-40 object-cover">
+      <div class="p-5">
+        <h3 class="font-bold text-xl mb-2">Workshop de Inovação</h3>
+        <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">20 de Outubro, Luanda</p>
+        <button onclick="openModal('eventModal')" class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition">
+          <span>Detalhes</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </button>
+      </div>
+    </div>
 
     <!-- Outro Card -->
     <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden hover:scale-105 transition">
-  <img src="img/3.jpg" alt="evento" class="w-full h-40 object-cover">
-  <div class="p-5">
-    <h3 class="font-bold text-xl mb-2">Conferência de Tecnologia</h3>
-    <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">15 de Setembro, Luanda</p>
-    <button onclick="openModal('eventModal')" class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition">
-      <span>Detalhes</span>
-      <!-- Ícone -->
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-      </svg>
-    </button>
-  </div>
-</div>
-
+      <img src="img/3.jpg" alt="evento" class="w-full h-40 object-cover">
+      <div class="p-5">
+        <h3 class="font-bold text-xl mb-2">Encontro de Startups</h3>
+        <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">05 de Novembro, Luanda</p>
+        <button onclick="openModal('eventModal')" class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-lg hover:bg-indigo-600 transition">
+          <span>Detalhes</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </button>
+      </div>
+    </div>
   </section>
 
   <!-- Sessão de Contactos -->
-  <footer class="bg-gray-200 dark:bg-gray-800 py-10 mt-12">
-    <div class="max-w-7xl mx-auto px-6 text-center">
-      <h3 class="text-2xl font-bold mb-4 text-indigo-600 dark:text-indigo-400">Contacte-nos</h3>
-      <p class="mb-6 text-gray-600 dark:text-gray-400">Fique conectado connosco através das nossas redes sociais</p>
-      <div class="flex justify-center gap-6">
-        <!-- Facebook -->
-        <a href="https://facebook.com" target="_blank" class="text-blue-600 hover:scale-110 transition">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M22 12c0-5.522-4.477-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987H7.898v-2.89h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562v1.875h2.773l-.443 2.89h-2.33v6.987C18.343 21.128 22 16.991 22 12"></path></svg>
-        </a>
-        <!-- Instagram -->
-        <a href="https://instagram.com" target="_blank" class="text-pink-500 hover:scale-110 transition">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3h10zm-5 3a5 5 0 100 10 5 5 0 000-10zm0 2c1.654 0 3 1.346 3 3s-1.346 3-3 3a3.001 3.001 0 01-3-3c0-1.654 1.346-3 3-3zm4.5-.75a1.25 1.25 0 11-.001 2.501A1.25 1.25 0 0116.5 8.25z"></path></svg>
-        </a>
-        <!-- WhatsApp -->
-        <a href="https://wa.me/244900000000" target="_blank" class="text-green-500 hover:scale-110 transition">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M12.005 2C6.485 2 2 6.486 2 12.006c0 2.115.557 4.179 1.615 5.997L2 22l4.146-1.586A9.931 9.931 0 0012.005 22C17.525 22 22 17.515 22 12.006 22 6.486 17.525 2 12.005 2zm0 18c-1.688 0-3.325-.46-4.758-1.332l-.341-.203-2.457.94.657-2.393-.221-.366A7.944 7.944 0 014.005 12c0-4.411 3.589-8.006 8-8.006 4.411 0 8 3.595 8 8.006 0 4.411-3.589 8-8 8zm4.307-5.846c-.235-.117-1.391-.684-1.607-.761-.216-.078-.373-.117-.53.117-.157.235-.607.761-.744.918-.137.157-.274.176-.509.059-.235-.117-.991-.365-1.888-1.162-.698-.623-1.168-1.39-1.304-1.625-.137-.235-.015-.362.103-.479.106-.106.235-.274.352-.411.117-.137.157-.235.235-.392.078-.157.039-.294-.02-.411-.059-.117-.53-1.274-.726-1.743-.196-.47-.393-.401-.53-.411-.137-.01-.294-.012-.451-.012s-.411.059-.627.294c-.216.235-.823.804-.823 1.96s.844 2.274.961 2.431c.117.157 1.66 2.536 4.022 3.553.562.243.999.389 1.34.497.562.179 1.073.154 1.477.093.451-.067 1.391-.568 1.587-1.115.196-.548.196-1.018.137-1.115-.059-.098-.216-.157-.451-.274z"></path></svg>
-        </a>
-        <!-- LinkedIn -->
-        <a href="https://linkedin.com" target="_blank" class="text-blue-700 hover:scale-110 transition">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.604 4.09 5.5 2.98 5.5S.98 4.604.98 3.5 1.87 1.5 2.98 1.5s2 .896 2 2zm.02 4.5H1V21h4V8zm7 0h-3.938v13H12v-6.5c0-3.584 4-3.875 4 0V21h4v-7.75c0-5.92-6.5-5.703-8-2.781V8z"></path></svg>
-        </a>
-      </div>
-      <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">© 2025 Imetro Eventos. Todos os direitos reservados.</p>
-    </div>
-  </footer>
-
-  <!-- Modal Detalhes do Evento -->
-  <div id="eventModal" class="fixed inset-0 hidden bg-black/50 backdrop-blur-sm flex items-center justify-center z-50">
-    <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl max-w-lg w-full p-6">
-      <h2 class="text-2xl font-bold mb-4">Detalhes do Evento</h2>
-      <p class="mb-4 text-gray-600 dark:text-gray-300">Conferência de Tecnologia com palestrantes renomados da área. Participe e expanda seus conhecimentos!</p>
-      <button class="w-full py-2 rounded-lg bg-indigo-500 text-white hover:bg-indigo-600 transition">Inscrever-se</button>
-      <button onclick="closeModal('eventModal')" class="mt-4 w-full py-2 rounded-lg border border-gray-400 dark:border-gray-600">Fechar</button>
+  <footer class="bg-gray-900 text-gray-300 py-8 mt-16">
+  <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
+    <p>&copy; 2025 Imetro Eventos. Todos os direitos reservados.</p>
+    <div class="flex space-x-6 mt-4 md:mt-0">
+      <!-- Facebook -->
+      <a href="#" class="hover:text-white">
+        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M22 12a10 10 0 10-11.5 9.9v-7H8v-3h2.5V9.5A3.5 3.5 0 0114 6h3v3h-3a1 1 0 00-1 1V12h4l-1 3h-3v7A10 10 0 0022 12z"/>
+        </svg>
+      </a>
+      <!-- Twitter -->
+      <a href="#" class="hover:text-white">
+        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M22.46 6c-.77.35-1.6.58-2.46.69a4.3 4.3 0 001.88-2.38 8.59 8.59 0 01-2.72 1.04 4.28 4.28 0 00-7.3 3.9A12.14 12.14 0 013 4.9a4.28 4.28 0 001.32 5.71 4.25 4.25 0 01-1.94-.54v.05a4.28 4.28 0 003.44 4.19 4.28 4.28 0 01-1.93.07 4.29 4.29 0 004 2.98 8.58 8.58 0 01-5.32 1.83A8.75 8.75 0 012 19.54a12.12 12.12 0 006.56 1.92c7.88 0 12.2-6.53 12.2-12.2 0-.19 0-.39-.01-.58A8.7 8.7 0 0022.46 6z"/>
+        </svg>
+      </a>
+      <!-- Instagram -->
+      <a href="#" class="hover:text-white">
+        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 
+                   2.243 5 5 5h10c2.757 0 5-2.243 
+                   5-5V7c0-2.757-2.243-5-5-5H7zm10 
+                   2a3 3 0 013 3v10a3 3 0 01-3 
+                   3H7a3 3 0 01-3-3V7a3 3 0 
+                   013-3h10zm-5 3a5 5 0 
+                   100 10 5 5 0 000-10zm0 
+                   2a3 3 0 110 6 3 3 0 
+                   010-6zm4.5-.25a1.25 1.25 
+                   0 100 2.5 1.25 1.25 0 
+                   000-2.5z"/>
+        </svg>
+      </a>
+      <!-- LinkedIn -->
+      <a href="#" class="hover:text-white">
+        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M4.98 3.5a2.5 2.5 0 11-.001 
+                   5.001A2.5 2.5 0 014.98 
+                   3.5zM3 9h4v12H3zM9 
+                   9h3.6v1.7h.05c.5-.95 
+                   1.75-1.95 3.6-1.95 
+                   3.85 0 4.55 2.5 
+                   4.55 5.7V21h-4v-5.6c0-1.35 
+                   0-3.1-1.9-3.1-1.9 
+                   0-2.2 1.45-2.2 
+                   3V21H9z"/>
+        </svg>
+      </a>
     </div>
   </div>
+</footer>
 
-  <!-- Modal Login -->
-  <div id="loginModal" class="fixed inset-0 hidden bg-black/50 backdrop-blur-sm flex items-center justify-center z-50">
-    <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl max-w-sm w-full p-6">
-      <h2 class="text-2xl font-bold mb-4">Entrar</h2>
-      <input type="email" placeholder="Email" class="w-full p-3 mb-3 rounded-lg border border-gray-300 dark:border-gray-600 bg-gray-50 dark:bg-gray-700">
-      <input type="password" placeholder="Senha" class="w-full p-3 mb-3 rounded-lg border border-gray-300 dark:border-gray-600 bg-gray-50 dark:bg-gray-700">
-      <button class="w-full py-2 rounded-lg bg-indigo-500 text-white hover:bg-indigo-600 transition">Login</button>
-      <button onclick="closeModal('loginModal')" class="mt-4 w-full py-2 rounded-lg border border-gray-400 dark:border-gray-600">Cancelar</button>
-    </div>
-  </div>
-
-  <!-- JS -->
-  <script>
-    function openModal(id) {
+<script>
+   function openModal(id) {
       document.getElementById(id).classList.remove('hidden');
     }
     function closeModal(id) {
@@ -146,6 +147,7 @@
       document.documentElement.classList.toggle('dark');
     }
   </script>
+
 
 </body>
 </html>
